--- a/templates/tmux.conf.j2
+++ b/templates/tmux.conf.j2
@@ -23,11 +23,17 @@ set -g mouse-select-window on
 # Enable mouse mode with M-m
 bind m \
   set -g mode-mouse on \;\
+  set -g mouse-resize-pane on \;\
+  set -g mouse-select-pane on \;\
+  set -g mouse-select-window on \;\
   display 'Mouse: ON'
 
 # Disable mouse mode with M-M
 bind M \
   set -g mode-mouse off \;\
+  set -g mouse-resize-pane off \;\
+  set -g mouse-select-pane off \;\
+  set -g mouse-select-window off \;\
   display 'Mouse: OFF'
 {% endif %}
 
