Enable support for 256 colors by default.
Closes #2

--- a/templates/tmux.conf.j2
+++ b/templates/tmux.conf.j2
@@ -51,6 +51,9 @@ set-option -g history-limit 8192
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Support 256 colors
+set -g default-terminal "screen-256color"
+
 # Activate Powerline. We assume that the most recent version supported in Debian's powerline package is the most recent version of tmux shipped in Debian. Powerline has it's own config...
 {% if ansible_distribution == "Debian" or ansible_distribution == "Ubuntu" %}
 source '/usr/share/powerline/bindings/tmux/powerline.conf'
